fixed checkout styling on mobile

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -2420,7 +2420,8 @@ app-checkout {
     }
   }
 
-  app-shop {
+  app-shop,
+  app-checkout {
     .banner_inner {
       margin-bottom: -26vw !important;
     }
